; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_wfdlgs2.c_DisableVersionCtls.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_wfdlgs2.c_DisableVersionCtls.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IDD_VERSION_FRAME = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@IDD_VERSION_KEY = common dso_local global i32 0, align 4
@IDD_VERSION_VALUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DisableVersionCtls(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @IDD_VERSION_FRAME, align 4
  %6 = call i32 @GetDlgItem(i32 %4, i32 %5)
  %7 = load i32, i32* @FALSE, align 4
  %8 = call i32 @EnableWindow(i32 %6, i32 %7)
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @IDD_VERSION_KEY, align 4
  %11 = call i32 @GetDlgItem(i32 %9, i32 %10)
  %12 = load i32, i32* @FALSE, align 4
  %13 = call i32 @EnableWindow(i32 %11, i32 %12)
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @IDD_VERSION_VALUE, align 4
  %16 = call i32 @GetDlgItem(i32 %14, i32 %15)
  %17 = load i32, i32* @FALSE, align 4
  %18 = call i32 @EnableWindow(i32 %16, i32 %17)
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @EnableWindow(i32, i32) #1

declare dso_local i32 @GetDlgItem(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
